{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 15,
  "lineage": "bd970d25-f160-5e82-41e0-61a49a3dcf9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0a568a8f1cab14217",
            "domain": "vpc",
            "id": "eipalloc-0eb7897d35d2eff5c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0365286a7838de861",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-210-53-139.compute-1.amazonaws.com",
            "public_ip": "54.210.53.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tf",
            "aws_network_interface.tf",
            "aws_security_group.tf",
            "aws_subnet.tf",
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:610786290351:instance/i-06b092c6f3726164d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b092c6f3726164d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0365286a7838de861"
              }
            ],
            "primary_network_interface_id": "eni-0365286a7838de861",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "54.210.53.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07470caf9f887354a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097b8a166dcf714ee",
            "tags": {
              "Name": "terraform-web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010663f3dcc023c80"
            ]
          },
          "dependencies": [
            "aws_network_interface.tf",
            "aws_security_group.tf",
            "aws_subnet.tf",
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610786290351:internet-gateway/igw-02bb2fa8ae409c8da",
            "id": "igw-02bb2fa8ae409c8da",
            "owner_id": "610786290351",
            "tags": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-03f50301a88c7659e"
          },
          "dependencies": [
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0365286a7838de861",
            "ipv6_address_count": 0,
            "mac_address": "12:60:45:ea:35:6f",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-010663f3dcc023c80"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097b8a166dcf714ee"
          },
          "dependencies": [
            "aws_security_group.tf",
            "aws_subnet.tf",
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e2082fddecd3e6a",
            "owner_id": "610786290351",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bb2fa8ae409c8da",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bb2fa8ae409c8da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rt-table"
            },
            "vpc_id": "vpc-03f50301a88c7659e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf",
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dba3d07586dd43c",
            "route_table_id": "rtb-01e2082fddecd3e6a",
            "subnet_id": "subnet-097b8a166dcf714ee"
          },
          "dependencies": [
            "aws_internet_gateway.tf",
            "aws_route_table.tf",
            "aws_subnet.tf",
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610786290351:security-group/sg-010663f3dcc023c80",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010663f3dcc023c80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "610786290351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-sg-allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50301a88c7659e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610786290351:subnet/subnet-097b8a166dcf714ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-097b8a166dcf714ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610786290351",
            "tags": {
              "Name": "terraform-subnet"
            },
            "tags_all": {
              "Name": "terraform-subnet"
            },
            "vpc_id": "vpc-03f50301a88c7659e"
          },
          "dependencies": [
            "aws_vpc.tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610786290351:vpc/vpc-03f50301a88c7659e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e83ed0bcc55ec1df",
            "default_route_table_id": "rtb-05d6897d3f98d7304",
            "default_security_group_id": "sg-053beb29e711ff28b",
            "dhcp_options_id": "dopt-bdfca2c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03f50301a88c7659e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d6897d3f98d7304",
            "owner_id": "610786290351",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}